--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-NI_TElvN.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DRv7E7SK.js"></script>
     <link rel="stylesheet" crossorigin href="./assets/iframe-DhgkvwT6.css">
   </head>
 
